--- a/test.html
+++ b/test.html
@@ -8,6 +8,28 @@
 <h8>hello, world!</h8>
 Hello, world!
 
+<p>これはパラグラフです。</p>
+<p>これも段落です。</p>
+
+<hr>
+
+
+<a href="https://google.com">Google</a>
+<a href="https://apple.com">Apple</a>
+<a href="https://news.yahoo.co.jp/pickup/6394089">Yahooニュース</a>
+
+
+<hr>
+
+<ul>
+	<li>リンゴ</li>
+	<li>ゴジラ</li>
+	<li>ランドセル</li>
+	<li>ルパン</li>
+</ul>
+
+
+
 
 <style>
 	h1,h5 {
